# arbitrage-bot

./: .clippy.toml  .gitignore  Cargo.toml  Makefile.toml  README.md  SETUP.md  docker-compose.yml.sample  envrc.sample
benches/: _arb.rs  arb.rs
contracts/cache/: solidity-files-cache.json
contracts/src/: SimpleExecutor.sol
contracts/test/: SimpleExecutor.t.sol
doc/: arbitrage-search.md
infra/: 01-system.yml  04-stas.yml  05-postgres.yml  06-fly.yml  08-lighthouse.yml  09-base.yml  10-reth.yml  base.yml  build.sh  docker.yml  fly.yml  geth.yml  inventory.yml  postgres.yml  prysm.yml  rust.yml
infra/templates/: base-execution.service.j2  base-geth-ipc-permissions.path.j2  base-geth-ipc-permissions.service.j2  base-geth.service.j2  base-node.service.j2  fly.service.j2  lighthouse.service.j2  reth.service.j2
migrations/2025-02-07-183230_rename_uniswap_pairs_to_pairs/: down.sql  up.sql
migrations/2025-02-08-211350_create_tokens/: up.sql
migrations/2025-02-08-211903_create_pairs/: up.sql
migrations/2025-03-03-155124_unique_indexes/: down.sql  up.sql
migrations/2025-03-06-002450_make-pairs-reserves-nullable/: down.sql  up.sql
migrations/2025-03-06-232727_reset_zero_usd_to_null/: down.sql  up.sql
migrations/2025-03-07-003711_add-last-pair-id-to-factories/: down.sql  up.sql
migrations/2025-03-07-010939_drop_usd_default/: down.sql  up.sql
migrations/2025-03-07-031547_make-tokens-decimals-nullable/: down.sql  up.sql
migrations/2025-03-07-143629_add_is_valid_to_pairs/: down.sql  up.sql
src/: bot.rs  core.rs  lib.rs  main.rs  schemas.rs
(+73 files in other folders)
